# Civitas-X

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  filepath.md  vcpkg.json
assets/audio/: README.txt  start_screen_music1.m4a
build-nmake-release/: Makefile
build-ucrt64/: .ninja_deps  .ninja_log  build.ninja
docs/: ARCHITECTURE.md  LOGIC_EXPLANATION.md  PHASE_PLAN.md  SETUP_WINDOWS.md
include/civitasx/: app.hpp  renderer2d.hpp  world.hpp
src/: app.cpp  main.cpp  renderer2d.cpp  world.cpp
src/agents/: car_agent.cpp  car_agent.h  npc_agent.cpp  npc_agent.h
src/ai/: behavior_system.cpp  behavior_system.h  decision_logic.cpp  decision_logic.h  pathfinding.cpp  pathfinding.h
src/engine/: camera.cpp  camera.h  input.cpp  input.h  renderer.cpp  renderer.h
src/graphics/: algorithms.cpp  algorithms.h  shape_drawer.cpp  shape_drawer.h  transformation.cpp  transformation.h
src/systems/: economy_system.cpp  economy_system.h  simulation_manager.cpp  simulation_manager.h  traffic_system.cpp  traffic_system.h
src/world/: city_map.cpp  city_map.h  road_network.cpp  road_network.h  tile_system.cpp  tile_system.h
